<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dfeaf1"
    android:orientation="vertical"
    tools:context="com.appodeal.test.activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sdkTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/sdkTextView" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <Switch
                            android:id="@+id/testModeSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:checked="false"
                            android:text="@string/testModeSwitch" />

                        <Switch
                            android:id="@+id/consentSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:checked="false"
                            android:text="@string/consentSwitch" />
                    </LinearLayout>

                    <Switch
                        android:id="@+id/sharedAdsInstanceSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:checked="false"
                        android:text="@string/sharedAdsInstanceSwitch" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/logLevelTextView" />

                    <Spinner
                        android:id="@+id/logLevelList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/b_set_childe_directed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="setChildDirectedTreatment"
                android:text="@string/set_child_directed_treatment" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/darker_gray" />

            <!--<LinearLayout
                android:id="@+id/nativeAdLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />-->

            <com.appodeal.test.layout.SlidingTabLayout
                android:id="@+id/slidingTabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.appodeal.test.layout.AdTypeViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

    <com.appodeal.ads.BannerView
        android:id="@+id/appodealBannerView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.appodeal.ads.MrecView
            android:id="@+id/appodealMrecView"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>
